Bug 163428 - Notes pane freezes Impress when changing slides (CairoSDPR BColorModified Bitmaps)
Summary: Notes pane freezes Impress when changing slides (CairoSDPR BColorModified Bit...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
24.8.0.1 rc
Hardware: All All
: medium normal
Assignee: Armin Le Grand (collabora)
URL:
Whiteboard: target:25.2.0
Keywords:
Depends on:
Blocks: Notes-View
  Show dependency treegraph
 
Reported: 2024-10-14 12:34 UTC by Moritz Duge (Collabora)
Modified: 2024-12-02 14:20 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
GDB backtraces of all thread from a frozen LibreOffice, possibly because of the notes pane. (33.58 KB, text/plain)
2024-10-14 12:34 UTC, Moritz Duge (Collabora)
Details
freezing happens with this file opened (1.19 MB, application/vnd.oasis.opendocument.presentation)
2024-10-14 12:52 UTC, Moritz Duge (Collabora)
Details
script for "git bisect run" (2.43 KB, text/plain)
2024-10-18 16:31 UTC, Moritz Duge (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Moritz Duge (Collabora) 2024-10-14 12:34:55 UTC
Created attachment 197044 [details]
GDB backtraces of all thread from a frozen LibreOffice, possibly because of the notes pane.

I recognized some problems for the new awesome notes pane introduced in LibreOffice-24.8.
This ticket is to collect and keep track of them.

By the way:
The notes pane is a really wonderful feature. It's extremely useful to me. Thanks!
Unfortunately that's why I care even more about bugs in it ;-)

I tested most things on Debian-12 Linux. Mostly with
  SAL_USE_VCLPLUGIN=gen OOO_FORCE_DESKTOP=none LANG=C.UTF-8 LANGUAGE=
but sometimes also with GTK3, KDE/QT5 and sometimes with German UI.
If not mentioned otherwise, things are tested with the current master at time of reporting.



= notes pane: slides switching hotkeys =
see: bug 163426



= Menu Mnemonic missing =
When opening the "View" menu, there's no mnemonic on the "Notes pane" entry.
Most other entries in that menu have mnemonics.
(also missing mnemonics in the View menu: Comments, Sidebar, Slide Transitions, Animations)



= Can't re-attach notes pane with KDE/QT5 =
It's possible to de-attach the notes pane, becoming a separate window.
When running with GTK3 or VCL gen I can re-attach that window to the bottom or the right of the Impress window, by moving the note pane window via it's window manager header bar. At some point it suddenly snaps back into the main window, which is the expected behavior.
Unfortunately that doesn't work with KDE/QT5 on Debian-12. The notes pane window just won't snap back into the main Impress window.



= LibreOffice freezes =
I'm not 100 % sure this is related to the notes pane. But until now it only happened to me while having the notes pane opened.
No more reaction from the LibreOffice UI. Sometimes it happens after switching slides a lot. But I've also seen it happen after just waiting a few minutes with a 25 slides presentation and the notes pane opened.
See attached backtraces from GDB: lo_freezes_possibly_notes_pane_-_backtraces.txt
Comment 1 Moritz Duge (Collabora) 2024-10-14 12:41:27 UTC
P.S.

Freezing tested with current master build from source on Debian-12.
https://git.libreoffice.org/core/+/d649e297fde11efab2c681605e27e513a183e314^!
That's where the backtrace if taken from.

But also happens with this bibisect build for example.
https://bibisect.libreoffice.org/linux-64-25.2﷒0
Comment 2 Julien Nabet 2024-10-14 12:48:25 UTC
(In reply to Moritz Duge (a.k.a. kolAflash) from comment #0)
> ...
> I recognized some problems for the new awesome notes pane introduced in
> LibreOffice-24.8.
> This ticket is to collect and keep track of them.
...
No, each bugtracker is related to 1 pb.
Now there are META bugtrackers which only reference bugtrackers concerning the same domain but META are empty (except the title and the referenced bugtrackers).
Comment 3 Moritz Duge (Collabora) 2024-10-14 12:52:54 UTC
Created attachment 197047 [details]
freezing happens with this file opened
Comment 4 Gabor Kelemen (Collabora) 2024-10-15 12:51:47 UTC
(In reply to Moritz Duge (a.k.a. kolAflash) from comment #3)
> Created attachment 197047 [details]
> freezing happens with this file opened

I tried to reproduce the freezing with this file under Linux and Windows, 24.8 and 25.2 bibisect branches on both, but had no success. Opening the file, changing slides with the NP open, typing into it - all works for me.
Comment 5 Gabor Kelemen (Collabora) 2024-10-18 09:49:36 UTC
(In reply to Gabor Kelemen (allotropia) from comment #4)
> (In reply to Moritz Duge (a.k.a. kolAflash) from comment #3)
> > Created attachment 197047 [details]
> > freezing happens with this file opened
> 
> I tried to reproduce the freezing with this file under Linux and Windows,
> 24.8 and 25.2 bibisect branches on both, but had no success. Opening the
> file, changing slides with the NP open, typing into it - all works for me.

In 25.2 looks like it freezes sometimes, but not a reliable enough way to bibisect it.
- Open the file
- Enable View - Notes Pane
- Switch to the second slide, then to the third, then to the second, then to the third
- Wait about 1 minute
-> should freeze (not crash, just "Dialog does not answer") once from 3 tries.
Comment 6 Gabor Kelemen (Collabora) 2024-10-18 11:20:19 UTC
Confirming this one for the freezing issue. Rest of the report was split out to separate reports.
Comment 7 Moritz Duge (Collabora) 2024-10-18 16:31:26 UTC
Created attachment 197135 [details]
script for "git bisect run"

I've written a Bash script for the freezing issue. It can be used to do "git bisect run" on the bibisect repo.
The script runs every commit 5 times for 2 minutes. And after starting LibreOffice it uses Page-Down and Page-Up to switch the slides a few times.

I've run the script and it yielded `55098d18c` as the first bad commit in the bibisect repo.
https://bibisect.libreoffice.org/linux-64-25.2
It maps to this source commit:
https://git.libreoffice.org/core/+/27829e4a6c5a4a1162599550c46b5e7f974aba91%5E

THIS MAY BE A WRONG RESULT, because the bug cannot be reproduced completely deterministically.
But I've tried reproducing the bug with 55098d18c and 55098d18c^ manually. And it looks like it's really the first bad commit.

Surprisingly the commit looks rather unrelated to the Notes Pane. The commit message headline is:
CairoSDPR: Improve BColorModified Bitmaps.

So I see three possibilities:
1. The bibisect result is simply wrong.
2. It's not related to the Notes Pane at all. Instead something with Cairo is broken.
3. Cairo isn't really the cause of the issue. But Cairo triggers some problem in rendering the Notes Pane.
Comment 8 Moritz Duge (Collabora) 2024-11-18 13:11:05 UTC
(In reply to Moritz Duge (a.k.a. kolAflash) from comment #7)
> [...]
> I've run the script and it yielded `55098d18c` as the first bad commit in
> the bibisect repo.
> https://bibisect.libreoffice.org/linux-64-25.2
> It maps to this source commit:
> https://git.libreoffice.org/core/+/
> 27829e4a6c5a4a1162599550c46b5e7f974aba91%5E

I somehow linked the wrong commit in the source repo.
This is where the broken bibisect commit 55098d18c really points.

https://git.libreoffice.org/core/+/27829e4a6c5a4a1162599550c46b5e7f974aba91%5E!/
Comment 9 Armin Le Grand (collabora) 2024-11-18 13:51:54 UTC
Tried to repro the freeze using comment 5 with the file from comment 3, but did not work. Checking if 27829e4a6c5a4a1162599550c46b5e7f974aba91 is involved at all (by debugging...)
Comment 10 Armin Le Grand (collabora) 2024-11-18 19:28:46 UTC
Indeed you have to disable 'Enable View - Notes Pane' again, restart LO, then do exactly what comment 5 says. Then I get the 'hang' as the GDB backtrace describes. Have to investigate...
BTW: This means it does not happen without Notes Pane - hmmmm...
Comment 11 Armin Le Grand (collabora) 2024-11-19 19:45:23 UTC
Found and (hopefully) understood. Should be fixed with https://gerrit.libreoffice.org/c/core/+/176795
Comment 12 Commit Notification 2024-11-20 15:53:35 UTC
Armin Le Grand (Collabora) committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c635271eb17e3b9d50223356dbc09b771fcd643f

tdf#163428 CairoSDPR: Fix regression in freeing unified buffers

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.